--- a/00-F1-CS1B-ASI-Nov2020/F1_Questions3.Rmd
+++ b/00-F1-CS1B-ASI-Nov2020/F1_Questions3.Rmd
@@ -1,28 +1,106 @@
+---
+title: "Statistics with R"
+subtitle: "Modelling Data with R"
+author: "Dragonfly Stats"
+date: "2016/12/12"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
+
+#### Exercise 
 
 Data is provided for ‘BMIClaims’ of 150 policyholders and corresponding claim count.
 (BMIClaims.csv)
-i) Obtain 95% confidence interval for the standard deviation of BMI (using qchisq). (6)
+---
+
+Another slide.
+
+```{r}
+BMI <- read.csv("CS1B_BMIClaims.csv")
+
+head(BMI)
+```
+
+---
+
+## Exercise 1
+
+Obtain 95% confidence interval for the standard deviation of BMI (using ``qchisq()``). 
+
+```{r}
+var(BMI$BMI)
+```
+
+
+```{r}
+
+sd(BMI$BMI)
+
+```
+
+
+---
+
+
+## Inspecting the Dataframe
+
+```{r}
+
+nrow(BMI)
+
+```
+
+---
+
+#### Variance Testing
+
+```{r}
+
+var.test(BMI$BMI,BMI$BMI)
+
+```
+
+---
+
+#### Exercise 2
+
 ii) Further test the standard deviation of BMI to be equal to 4 by obtaining p value. State
 your conclusion of the test. (6)
-Page 2 of 3IAI
-CS1B–1120
+
 iii)
 iii)
 iv)
 
+---
+
 
 If obese is defined to be BMI above 30, use binom.test to calculate 99% confidence
 interval for proportion of obese people and comment on the likelihood if more than
 20 pc are obese.
+
+---
+
+## Exercise 3
+
 Claim frequency can be calculated as claim count divided by number of policyholders.
 Test whether claim frequency is different between obese and others.
-(6)
-(6)
-[24]
+
+---
+
+## Exercise 4
+
 Q. 4)
+
 If obese is defined to be BMI above 30, use binom.test to calculate 99% confidence
 interval for proportion of obese people and comment on the likelihood if more than
 20 pc are obese.
+
+---
+
 Claim frequency can be calculated as claim count divided by number of policyholders.
 Test whether claim frequency is different between obese and others.
 
@@ -31,8 +109,11 @@ i)
 > BMI <- read.csv("BMIClaims.csv")
 > n <- length(BMI$BMI)
 > alpha <- 0.05
+
 ...
-[2]
+
+---
+
 > sqrt(c((n-1)*var(BMI$BMI)/qchisq(1-alpha/2,df=n-1),(n-1)*var(BMI$BMI)/qchisq(alpha/2
 ,df=n-1)))
 [2]
@@ -51,16 +132,19 @@ i)
 > 2*(pchisq((n-1)*var(BMI$BMI)/sigma^2,df=n-1,lower.tail=FALSE))
 [1] 3.564503e-25
 [1]
-[2]
-[1]
+---
 Since p-value is less than 5%, there is sufficient evidence to reject the hypothesis,
 i.e. the standard deviation of BMI is not equal to 4.
 [2]
-[6]
+
+---
+
 iii)
 > x <- nrow(BMI[BMI$BMI>30,])
 > binom.test(x,n,conf.level = 0.99)
-[1]
+
+---
+
 [2]
 Exact binomial test
 data: x and n
@@ -72,14 +156,19 @@ sample estimates:
 probability of success
 0.06666667
 
+---
+
 Since 99% CI for p doesn’t contain p=0.2
 it is unlikely that the proportion of obese policyholders is more than 20%.. ..
-[1]
-[1]
-[1]
-[6]
-iv)
-> table(BMI$BMI>30,BMI$ClaimCount)
+
+---
+
+#### Exercise 4
+
+```{r}
+table(BMI$BMI>30,BMI$ClaimCount)
+
+```
 0
 FALSE 133
 TRUE
@@ -90,7 +179,9 @@ TRUE
 > y <- c(3,7)
 > m <- c(10,140)
 > poisson.test(y,m)
-[2]
+
+---
+
 [1]
 Comparison of Poisson rates
 data: y time base: m
@@ -100,10 +191,11 @@ alternative hypothesis: true rate ratio is not equal to 1
 1.001171 26.282304
 sample estimates:
 rate ratio
-6
+
+---
+
 Since p-value is less than 5% i.e. 2.5%, there is sufficient evidence to reject the hy
 pothesis, i.e. Claim frequency is different between obese and others.
 (Alternatively, can use prop.test)
-[2]
-[6]
-[24 Marks]
+
+---
