--- a/00-B2/01-Exercise1-ShortQuestion.Rmd
+++ b/00-B2/01-Exercise1-ShortQuestion.Rmd
@@ -1,31 +1,15 @@
-\documentclass[a4paper,12pt]{article}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{eurosym}
-\usepackage{vmargin}
-\usepackage{amsmath}
-\usepackage{graphics}
-\usepackage{epsfig}
-\usepackage{enumerate}
-\usepackage{multicol}
-\usepackage{subfigure}
-\usepackage{fancyhdr}
-\usepackage{listings}
-\usepackage{framed}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{chngpage}
-%\usepackage{bigints}
+---
+title: "Statistics with R"
+subtitle: "R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
 
-\usepackage{vmargin}
-% left top textwidth textheight headheight
-% headsep footheight footskip
-\setmargins{2.0cm}{2.5cm}{16 cm}{22cm}{0.5cm}{0cm}{1cm}{1cm}
-\renewcommand{\baselinestretch}{1.3}
 
-\setcounter{MaxMatrixCols}{10}
-
-\begin{document}
-\large 
 \noindent A general insurance company has sold 5000 Accident Benefit Policies to independent lives.\\\\
 \medskip
 \noindent The number of claims follows a Poisson distribution with parameter 500. The amount of claim
@@ -43,10 +27,9 @@ distribution).
 
 \includegraphics[scale=1.3]{00-B2/images/B2_Agg_Claim_CompoundPoisson.JPG}
 
-\bigskip
-\includegraphics[scale=1.4]{00-B2/images/B2-PairwiseMinimum.JPG}
-\newpage 
-\begin{framed}
+
+---
+
 \begin{verbatim}
 set.seed(1234)
 n <- rpois(5000,500)
@@ -59,10 +42,8 @@ for(j in 1:5000){
     Agg_Claim[j] <-sum(z)
     }
 
-\end{verbatim}
-\end{framed}
 
-\newpage 
+---
 
 \includegraphics[scale=1.5]{00-B2/images/B2_Agg_Claim_1.JPG}
 
@@ -70,6 +51,4 @@ for(j in 1:5000){
 \medskip
 \includegraphics[scale=1.5]{00-B2/images/B2_Agg_Claim_2.JPG}
 
-\newpage 
-BLANK
-\end{document}
+---
