--- a/00-B2/02-Exercise2.Rmd
+++ b/00-B2/02-Exercise2.Rmd
@@ -1,3 +1,13 @@
+---
+title: "Statistics with R"
+subtitle: "R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
 
 
 Exercise 1
@@ -25,8 +35,9 @@ claim
 0.001
 0.003
 All policies and claims are independent.
-i)
-ii)
+
+---
+
 Simulate a set of 5,000 observations from the insurer’s aggregate claims size
 distribution. Use seed corresponding to your birth year.
 Summarize the output, draw plot histogram of the simulated results, and comment on
@@ -71,16 +82,12 @@ Sumofclaims_sim
 260.0237473 58.7869147 0.0000000 824.1810537 121.5688946 393.4891939
 34.2667969 0.0000000 0.0000000 323.9416166 0.0000000 47.5719195
 
-==================================================================
-
-
-
-==================================================================
+---
 400.2364413 155.3775077
 ii) summary(Sumofclaims_sim)
 hist(Sumofclaims_sim)
 
-%---------------------------%
+---
 > summary(Sumofclaims_sim)
 Min. 1st Qu. Median
 Mean 3rd Qu.
@@ -88,6 +95,7 @@ Max.
 0.00
 29.03 175.60 260.88 393.86 2664.99
 [Note the numbers will change with change in seed]
+---
 The claims seem to be highly skewed with Q1 equal to 29.03, Q2 equal to 260.88 and Q3 equal to
 393.86. The highest value is 2664.99.
 
