--- a/00-C2-CS2B-September/Exercise3.Rmd
+++ b/00-C2-CS2B-September/Exercise3.Rmd
@@ -1,3 +1,13 @@
+---
+title: "Statistics with R"
+subtitle: "R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
 
 
 
@@ -199,7 +209,7 @@ VarRe_alt
 ```
 
 
-%
+----
 
 
 
