--- a/00-D1/01-Part1-Probability-Cricket.Rmd
+++ b/00-D1/01-Part1-Probability-Cricket.Rmd
@@ -1,30 +1,14 @@
-\documentclass[a4paper,12pt]{article}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{eurosym}
-\usepackage{vmargin}
-\usepackage{amsmath}
-\usepackage{graphics}
-\usepackage{epsfig}
-\usepackage{enumerate}
-\usepackage{multicol}
-\usepackage{subfigure}
-\usepackage{fancyhdr}
-\usepackage{listings}
-\usepackage{framed}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{chngpage}
-%\usepackage{bigints}
+---
+title: "Statistics with R"
+subtitle: "R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
 
-\usepackage{vmargin}
-% left top textwidth textheight headheight
-% headsep footheight footskip
-\setmargins{2.0cm}{2.5cm}{16 cm}{22cm}{0.5cm}{0cm}{1cm}{1cm}
-\renewcommand{\baselinestretch}{1.3}
-
-\setcounter{MaxMatrixCols}{10}
-
-\begin{document}
 
 
 All questions need to be answered using the ‘R’ software, unless otherwise mentioned.
@@ -34,6 +18,8 @@ i) Prepare a probability distribution table of number of wins if Indians are goi
 matches against the South Africans. (4)
 ii) Plot a bar chart of the probabilities of number of wins from 0 to 10. (4)
 iii) Find the mean and median number of wins for India against South Africa.
+
+---
 
 
 Solution 1:
@@ -70,27 +56,35 @@ prob
 0.1210608210
 0.0282475249
 
+
+---
+
 ii)
 bar chart of the probabilities of number of wins
 barplot(prob,main = "Bar Chart of Probability of Successes", xlab = "Numbe
 r of Successes", names.arg = 0:10)
 
-iii)
+---
+
 mean and median number of wins for India against South Africa
+
+```{r}
 mean<-10*0.7 #or
-Page 2 of 13IAI
+
 
 mean<-sum(probability_Densities$No_Successes*probability_Densities$prob
 )
 mean
+```
+---
 
-##  7
-
+```{r}
 median<-qbinom(0.5,size = 10,prob = 0.7)
 median
+```
 
-##  7
 
+---
 
 
 
