--- a/00-D1/03-Part3_Indices_Returns_1.Rmd
+++ b/00-D1/03-Part3_Indices_Returns_1.Rmd
@@ -1,32 +1,15 @@
-\documentclass[a4paper,12pt]{article}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{eurosym}
-\usepackage{vmargin}
-\usepackage{amsmath}
-\usepackage{graphics}
-\usepackage{epsfig}
-\usepackage{enumerate}
-\usepackage{multicol}
-\usepackage{subfigure}
-\usepackage{fancyhdr}
-\usepackage{listings}
-\usepackage{framed}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{chngpage}
-%\usepackage{bigints}
+---
+title: "Statistics with R"
+subtitle: "R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
 
-\usepackage{vmargin}
-% left top textwidth textheight headheight
-% headsep footheight footskip
-\setmargins{2.0cm}{2.5cm}{16 cm}{22cm}{0.5cm}{0cm}{1cm}{1cm}
-\renewcommand{\baselinestretch}{1.3}
 
-\setcounter{MaxMatrixCols}{10}
-
-\begin{document}
-
-\large 
 \noindent Refer to the data file \textbf{\textit{Indices\_Returns.csv}} and answer the following questions:
 
 
@@ -39,9 +22,8 @@ indices<-read.csv("Indices_Returns.csv")
 
 
 
-\includegraphics[scale=0.45]{00-D1/images/indices_head.png}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage 
+---
+
 \subsection*{Exercise 1}
 
 Compute the pairwise Pearson correlation coefficient between the returns of 10 sectors
@@ -62,9 +44,8 @@ correlation
 
 
 
+---
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage 
 \subsection*{Exercise 2}
 \noindent Identify the pair with the highest correlation coefficient and the pair with the least correlation coefficient. 
 
@@ -78,7 +59,7 @@ min_cor_location <- which(correlation == min(correlation))
 min_cor_location
 \end{verbatim}\end{framed} 
 
-
+---
 
 
 \begin{framed} \begin{verbatim}
@@ -89,7 +70,7 @@ colnames(correlation)
 \includegraphics[scale=0.45]{00-D1/images/indices_rownames.png}
 
 
-
+---
 
 
 \begin{framed} \begin{verbatim}
@@ -116,6 +97,7 @@ min_cor_location %% 10
 </ol>
 
 
+---
 
 
 \begin{framed} \begin{verbatim}
@@ -128,7 +110,7 @@ ceiling(min_cor_location%%10)
 	<li>8</li>
 </ol>
 
-
+---
 
 
 \begin{framed} \begin{verbatim}
