--- a/00-D1/04-Part4-Indices_Returns_2.Rmd
+++ b/00-D1/04-Part4-Indices_Returns_2.Rmd
@@ -1,33 +1,15 @@
-\documentclass[a4paper,12pt]{article}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{eurosym}
-\usepackage{vmargin}
-\usepackage{amsmath}
-\usepackage{graphics}
-\usepackage{epsfig}
-\usepackage{enumerate}
-\usepackage{multicol}
-\usepackage{subfigure}
-\usepackage{fancyhdr}
-\usepackage{listings}
-\usepackage{framed}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{chngpage}
-%\usepackage{bigints}
-
-\usepackage{vmargin}
-% left top textwidth textheight headheight
-% headsep footheight footskip
-\setmargins{2.0cm}{2.5cm}{16 cm}{22cm}{0.5cm}{0cm}{1cm}{1cm}
-\renewcommand{\baselinestretch}{1.3}
-
-\setcounter{MaxMatrixCols}{10}
-
-\begin{document}
+---
+title: "Statistics with R"
+subtitle: "R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
 
 
-\large 
 \noindent Compute the 5-th percentile, 1st quartile, median, 3rd quartile and 95 th percentile of both
 the actual claims paid as well as from the fitted distributions. 
 
@@ -44,8 +26,8 @@ quantile(AutoClaims$PAID,c(0.05,0.25,0.5,0.75,0.95))
 \end{framed}
 
 
-%%%%%%%%%%%%%%%%%
-\newpage 
+---
+
 \noindent Using the results from (ii) and (iii), comment on goodness-of-fit of the models to the
 data.
 
@@ -73,7 +55,9 @@ qgamma(c(0.05,0.25,0.5,0.75,0.95),shape = GammaAlpha,rate = GammaBeta)
 ##  142.0733 1276.6130 3737.9364 8453.3371 20244.3595
 \end{verbatim}
 \end{framed}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+---
+
 iv)
 #Comment based on (ii) and (iii)
 
@@ -90,11 +74,8 @@ Exponential distributions cannot be concluded.
 \end{itemize}
 
 
+---
 
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage 
 Part (i) was well attempted though many students had difficulty in arriving at the parameter
 s corresponding to lognormal distribution and Gamma distribution. 
 
@@ -108,4 +89,3 @@ Part (iv) was not attempted by many students a
 nd among them who attempted, complete interpretation was lagging. Very few wrote a det
 ailed interpretation of the result.
 
-\end{document}
