--- a/00-D1/05-Part5_Indices_Returns_3.Rmd
+++ b/00-D1/05-Part5_Indices_Returns_3.Rmd
@@ -1,30 +1,13 @@
-\documentclass[a4paper,12pt]{article}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{eurosym}
-\usepackage{vmargin}
-\usepackage{amsmath}
-\usepackage{graphics}
-\usepackage{epsfig}
-\usepackage{enumerate}
-\usepackage{multicol}
-\usepackage{subfigure}
-\usepackage{fancyhdr}
-\usepackage{listings}
-\usepackage{framed}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{chngpage}
-%\usepackage{bigints}
-
-\usepackage{vmargin}
-% left top textwidth textheight headheight
-% headsep footheight footskip
-\setmargins{2.0cm}{2.5cm}{16 cm}{22cm}{0.5cm}{0cm}{1cm}{1cm}
-\renewcommand{\baselinestretch}{1.3}
-
-\setcounter{MaxMatrixCols}{10}
-
-\begin{document}
+---
+title: "Statistics with R"
+subtitle: "R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
 
 
 
@@ -78,8 +61,9 @@ summary(model1)
 
 
 \end{verbatim}\end{framed}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%5
-\newpage 
+
+---
+
 ## Exercise 
 
 Identify which sectors have significantly impacted the direction of Sensex returns at 95% and 99% confidence level.
@@ -87,12 +71,12 @@ Identify which sectors have significantly impacted the direction of Sensex retur
 Verify the relationship between residual deviance of the model and the Akaike Information Criteria (AIC). 
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
-\newpage
+---
+
 \subsection*{Exercise 3}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
-\newpage
+
 \subsection*{Exercise 4}
 
 
@@ -109,4 +93,3 @@ Relationship between the residual deviance and AIC
 us the intercept))
 
 
-\end{document}
