--- a/00-D1/06-Part6_Indices_Returns_4.Rmd
+++ b/00-D1/06-Part6_Indices_Returns_4.Rmd
@@ -1,34 +1,17 @@
-\documentclass[a4paper,12pt]{article}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{eurosym}
-\usepackage{vmargin}
-\usepackage{amsmath}
-\usepackage{graphics}
-\usepackage{epsfig}
-\usepackage{enumerate}
-\usepackage{multicol}
-\usepackage{subfigure}
-\usepackage{fancyhdr}
-\usepackage{listings}
-\usepackage{framed}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{chngpage}
-%\usepackage{bigints}
-
-\usepackage{vmargin}
-% left top textwidth textheight headheight
-% headsep footheight footskip
-\setmargins{2.0cm}{2.5cm}{16 cm}{22cm}{0.5cm}{0cm}{1cm}{1cm}
-\renewcommand{\baselinestretch}{1.3}
-
-\setcounter{MaxMatrixCols}{10}
-
-\begin{document}
+---
+title: "Statistics with R"
+subtitle: "R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
 
 
 
-```R
+```{r}
 v) Plot the residuals of the fitted model and identify which month is the most significant
 outlier in the residuals. (4)
 
@@ -42,7 +25,7 @@ refitting the GLM with ‘logit’ link function.
 ```
 
 
-```R
+```{r}
 ##  TRUE
 v)
 Plot the residuals of Model
@@ -98,7 +81,7 @@ Hence the standard errors may not be appropriate
 ```
 
 
-```R
+```{r}
 
 vii) Update the model fitted in (ii) above, as suggested by your friend and display the summary
 of the model.
@@ -109,7 +92,7 @@ difference in the residual deviances between the two models.
 ```
 
 
-```R
+```{r}
 
 vii)
 Remove the variables that do not impact the model
