--- a/00-F2-CS2B-ASI-Nov2020/F2-Question1.Rmd
+++ b/00-F2-CS2B-ASI-Nov2020/F2-Question1.Rmd
@@ -1,3 +1,15 @@
+---
+title: "Statistics with R"
+subtitle: "R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
+
+
 Q. 1)
 Use the data file “Mortality_Investigation.csv” to answer the below questions. This table
 contains the details of mortality investigation performed on 100 different male lives
