--- a/00-F2-CS2B-ASI-Nov2020/F2-Question2.Rmd
+++ b/00-F2-CS2B-ASI-Nov2020/F2-Question2.Rmd
@@ -1,3 +1,15 @@
+---
+title: "Statistics with R"
+subtitle: "R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
+
+
 Exercise 1
 ==================================================================================
 i)
