--- a/00-C1/04-Exercise4.Rmd
+++ b/00-C1/04-Exercise4.Rmd
@@ -1,3 +1,13 @@
+---
+title: "Statistics with R"
+subtitle: "R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
 
 
 ```{r}
