--- a/00-B1-Autoclaims/01-Exercise1-Part1and2.Rmd
+++ b/00-B1-Autoclaims/01-Exercise1-Part1and2.Rmd
@@ -1,6 +1,17 @@
+---
+title: "Statistics with R"
+subtitle: "R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
 
-\large
-# sessionInfo()
+
+
+
 ### AutoClaims
 ​
 library(readr)
