--- a/00-D2/07-Part7.Rmd
+++ b/00-D2/07-Part7.Rmd
@@ -1,1 +1,10 @@
-
+---
+title: "Statistics with R"
+subtitle: "R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
